[gd_scene load_steps=49 format=3 uid="uid://ewp2hrkovssq"]

[ext_resource type="Texture2D" uid="uid://433gtkpfs01e" path="res://Art/Scene/C1/c1.png" id="1_a2fqw"]
[ext_resource type="Script" uid="uid://bckim3syuok7i" path="res://Scene/Chapter/chapter_1.gd" id="1_lnugw"]
[ext_resource type="PackedScene" uid="uid://rspc6iao21u6" path="res://Scene/Chapter/LyricBook/lyric_book.tscn" id="2_uwbfd"]
[ext_resource type="Texture2D" uid="uid://kyv5ocj51dlo" path="res://Art/Scene/C1/Dialogue/D1.png" id="2_wf4ge"]
[ext_resource type="Texture2D" uid="uid://dsdtggqah6saa" path="res://Art/Scene/C1/Dialogue/D2.png" id="3_0ukwh"]
[ext_resource type="Texture2D" uid="uid://cnlxgt8g54tik" path="res://Art/LyricBook/エルゴスム/quiz.png" id="3_aaudm"]
[ext_resource type="Texture2D" uid="uid://c3hnd3cltatp1" path="res://Art/Scene/C1/Ring1.png" id="4_pqmx1"]
[ext_resource type="Texture2D" uid="uid://dyxl3x4slgkpy" path="res://Art/Scene/C1/Dialogue/D3.png" id="4_wrgwr"]
[ext_resource type="Texture2D" uid="uid://c3gsqydp4j7s5" path="res://Art/Scene/C1/Dialogue/D4.png" id="5_elaay"]
[ext_resource type="Texture2D" uid="uid://cveodwsj4mx6j" path="res://Art/Scene/C1/Ring2.png" id="5_pcnlo"]
[ext_resource type="Texture2D" uid="uid://xbn5p2kg66m0" path="res://Art/LyricBook/エルゴスム/S∀MPLING MΘNSTER.png" id="5_uu4i1"]
[ext_resource type="Texture2D" uid="uid://q1oyra54y2ii" path="res://Art/Scene/C1/Dialogue/D5.png" id="6_6yi7t"]
[ext_resource type="Texture2D" uid="uid://cpt6q457tqfi7" path="res://Art/Scene/C1/Dialogue/D6.png" id="7_0hvb1"]
[ext_resource type="Texture2D" uid="uid://cw1fghfq7t2li" path="res://Art/LyricBook/エルゴスム/- quiz.png" id="7_6j0po"]
[ext_resource type="Texture2D" uid="uid://c08fj5xacnnno" path="res://Art/LyricBook/エルゴスム/サーカトーヴォ.png" id="7_wwyfn"]
[ext_resource type="Texture2D" uid="uid://mf4nyonm46tj" path="res://Art/Scene/C1/Dialogue/D7.png" id="8_jeb21"]
[ext_resource type="Texture2D" uid="uid://bdwvhwcmvcq00" path="res://Art/LyricBook/エルゴスム/スマートを模索する.png" id="9_pcnlo"]
[ext_resource type="Texture2D" uid="uid://dqouw0r0u7xq6" path="res://Art/LyricBook/エルゴスム/- S∀MPLING MΘNSTER.png" id="9_rthgv"]
[ext_resource type="Texture2D" uid="uid://cwxbkcioowy38" path="res://Art/Scene/C1/Dialogue/D8.png" id="9_ytnsm"]
[ext_resource type="Texture2D" uid="uid://bdfch7fpjjul" path="res://Art/Scene/C1/Dialogue/D9.png" id="10_so0ql"]
[ext_resource type="Texture2D" uid="uid://dnl3w8dec7dj3" path="res://Art/LyricBook/エルゴスム/トーチカ.png" id="11_6j0po"]
[ext_resource type="Texture2D" uid="uid://dgnjtmrecdj07" path="res://Art/LyricBook/エルゴスム/- サーカトーヴォ.png" id="11_kuk0f"]
[ext_resource type="Texture2D" uid="uid://dytyix8u0prjx" path="res://Art/Scene/C1/Dialogue/D10.png" id="11_v1t0q"]
[ext_resource type="AudioStream" uid="uid://dime8h0nap1em" path="res://Audio/Voice/この世界のうたは、もう消えそうだ​..wav" id="11_x7dj5"]
[ext_resource type="AudioStream" uid="uid://cmt0k62yacdi6" path="res://Audio/Voice/今更どうやって歌い続ければいいのでしょう.wav" id="12_rsyhj"]
[ext_resource type="Texture2D" uid="uid://7i22aj64awbu" path="res://Art/LyricBook/エルゴスム/- スマートを模索する.png" id="13_6cm64"]
[ext_resource type="AudioStream" uid="uid://ojby4wunp6hh" path="res://Audio/Voice/返事の無い返事を待つのが嫌だから.wav" id="13_cjpxh"]
[ext_resource type="Texture2D" uid="uid://c7nfgeyot6svo" path="res://Art/LyricBook/エルゴスム/レプリカ.png" id="13_kuk0f"]
[ext_resource type="AudioStream" uid="uid://cekbtox035rqf" path="res://Audio/Voice/くだらない質問投げつけていたの..wav" id="14_v8fem"]
[ext_resource type="AudioStream" uid="uid://b0ul76j1iete7" path="res://Audio/Voice/マスター…行かないで…​.wav" id="15_4okjs"]
[ext_resource type="Texture2D" uid="uid://su5h5lkjmfsg" path="res://Art/LyricBook/エルゴスム/- トーチカ.png" id="15_8mex3"]
[ext_resource type="Texture2D" uid="uid://cth77b8trberf" path="res://Art/LyricBook/エルゴスム/或る街のギギ.png" id="15_n3b6e"]
[ext_resource type="AudioStream" uid="uid://d00kp3wxf8nbw" path="res://Audio/Voice/全ては戻れなかった。夢も消えちゃった。それなのに、目が覚めないの.wav" id="16_kc1sy"]
[ext_resource type="Texture2D" uid="uid://dnegaug736uce" path="res://Art/LyricBook/エルゴスム/- レプリカ.png" id="17_0ukwh"]
[ext_resource type="AudioStream" uid="uid://cucoxwk4uqyqh" path="res://Audio/Voice/その答えはわかっているのに….wav" id="17_wgxhh"]
[ext_resource type="Texture2D" uid="uid://uuqjcw40o120" path="res://Art/LyricBook/エルゴスム/阿呆なるものは.png" id="18_0ukwh"]
[ext_resource type="AudioStream" uid="uid://bwi75r27rp2ha" path="res://Audio/Voice/君はもう…いないだろう..wav" id="18_ogrta"]
[ext_resource type="AudioStream" uid="uid://dhxxaoedbhtj5" path="res://Audio/Voice/でも私、あなたの声を聞きたいと思ってる.wav" id="19_h3h0o"]
[ext_resource type="Texture2D" uid="uid://cpy325mxhdggr" path="res://Art/LyricBook/エルゴスム/- 或る街のギギ.png" id="19_wrgwr"]
[ext_resource type="AudioStream" uid="uid://drtgr1taeum81" path="res://Audio/Voice/答えよ、マスター.wav" id="20_x7dj5"]
[ext_resource type="Texture2D" uid="uid://f773f112dnww" path="res://Art/Scene/C1/p1.png" id="21_uu4i1"]
[ext_resource type="AudioStream" uid="uid://dkos4t23fny6m" path="res://Audio/BGM/エゴbgm.wav" id="21_v1t0q"]
[ext_resource type="Texture2D" uid="uid://by8io43dp8ktv" path="res://Art/Scene/C1/p2.png" id="22_5bhq5"]
[ext_resource type="Texture2D" uid="uid://des0c51q2ljl7" path="res://Art/LyricBook/エルゴスム/- 阿呆なるものは.png" id="22_elaay"]

[sub_resource type="Animation" id="Animation_pqmx1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("P2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Ego/Ego:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Ego/Ego:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wwyfn"]
resource_name = "show9"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("P2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcnlo"]
_data = {
&"RESET": SubResource("Animation_pqmx1"),
&"show9": SubResource("Animation_wwyfn")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_c6o3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pqmx1")
}, {
"duration": 1.0,
"texture": ExtResource("5_pcnlo")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Chapter1" type="Node2D"]
script = ExtResource("1_lnugw")
dialogue_tex = Array[Texture2D]([ExtResource("2_wf4ge"), ExtResource("3_0ukwh"), ExtResource("4_wrgwr"), ExtResource("5_elaay"), ExtResource("6_6yi7t"), ExtResource("7_0hvb1"), ExtResource("8_jeb21"), ExtResource("9_ytnsm"), ExtResource("10_so0ql")])
dialogue_voice = Array[AudioStream]([ExtResource("11_x7dj5"), ExtResource("12_rsyhj"), ExtResource("13_cjpxh"), ExtResource("14_v8fem"), ExtResource("15_4okjs"), ExtResource("16_kc1sy"), ExtResource("17_wgxhh"), ExtResource("18_ogrta"), ExtResource("19_h3h0o"), ExtResource("20_x7dj5")])
nts = "uid://wv8wrc12p5g3"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_v1t0q")
autoplay = true
bus = &"BGM"

[node name="Voice" type="AudioStreamPlayer" parent="."]
bus = &"Voice"

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("1_a2fqw")
centered = false

[node name="QUI" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(1145, 780)

[node name="quiz" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(153, 608)

[node name="TextureButton" parent="quiz" index="0"]
texture_normal = ExtResource("3_aaudm")

[node name="TextureRect" parent="quiz/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("7_6j0po")

[node name="S∀MPLING MΘNSTER" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(244, 971)

[node name="TextureButton" parent="S∀MPLING MΘNSTER" index="0"]
texture_normal = ExtResource("5_uu4i1")

[node name="TextureRect" parent="S∀MPLING MΘNSTER/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("9_rthgv")

[node name="サーカトーヴォ" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(367, 789)

[node name="TextureButton" parent="サーカトーヴォ" index="0"]
texture_normal = ExtResource("7_wwyfn")

[node name="TextureRect" parent="サーカトーヴォ/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("11_kuk0f")

[node name="スマートを模索する" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(1670, 816)

[node name="TextureButton" parent="スマートを模索する" index="0"]
texture_normal = ExtResource("9_pcnlo")

[node name="TextureRect" parent="スマートを模索する/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("13_6cm64")

[node name="トーチカ" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(1038, 1024)

[node name="TextureButton" parent="トーチカ" index="0"]
texture_normal = ExtResource("11_6j0po")

[node name="TextureRect" parent="トーチカ/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("15_8mex3")

[node name="レプリカ" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(1827, 613)

[node name="TextureButton" parent="レプリカ" index="0"]
texture_normal = ExtResource("13_kuk0f")

[node name="TextureRect" parent="レプリカ/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("17_0ukwh")

[node name="或る街のギギ" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(217, 555)

[node name="TextureButton" parent="或る街のギギ" index="0"]
texture_normal = ExtResource("15_n3b6e")

[node name="TextureRect" parent="或る街のギギ/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("19_wrgwr")

[node name="阿呆なるものは" parent="." instance=ExtResource("2_uwbfd")]
position = Vector2(1419, 594)

[node name="TextureButton" parent="阿呆なるものは" index="0"]
texture_normal = ExtResource("18_0ukwh")

[node name="TextureRect" parent="阿呆なるものは/CanvasLayer/PanelContainer" index="0"]
texture = ExtResource("22_elaay")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../P1")
libraries = {
&"": SubResource("AnimationLibrary_pcnlo")
}

[node name="P1" type="TextureButton" parent="."]
offset_left = 579.0
offset_top = 643.0
offset_right = 782.0
offset_bottom = 827.0
texture_normal = ExtResource("21_uu4i1")

[node name="P2" type="Sprite2D" parent="P1"]
visible = false
position = Vector2(144, 13)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("22_5bhq5")
offset = Vector2(86, -56)

[node name="Ring" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c6o3r")
autoplay = "default"
frame_progress = 0.19809
centered = false

[node name="DialogueSprite" type="Sprite2D" parent="."]
centered = false

[node name="Ego" type="CanvasLayer" parent="."]

[node name="Ego" type="PanelContainer" parent="Ego"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Ego/Ego"]
layout_mode = 2
texture = ExtResource("11_v1t0q")
expand_mode = 5
stretch_mode = 5

[connection signal="book_closed" from="QUI" to="." method="on_book_closed"]
[connection signal="book_pressed" from="QUI" to="." method="on_book_pressed"]
[connection signal="book_closed" from="quiz" to="." method="on_book_closed"]
[connection signal="book_pressed" from="quiz" to="." method="on_book_pressed"]
[connection signal="book_closed" from="S∀MPLING MΘNSTER" to="." method="on_book_closed"]
[connection signal="book_pressed" from="S∀MPLING MΘNSTER" to="." method="on_book_pressed"]
[connection signal="book_closed" from="サーカトーヴォ" to="." method="on_book_closed"]
[connection signal="book_pressed" from="サーカトーヴォ" to="." method="on_book_pressed"]
[connection signal="book_closed" from="スマートを模索する" to="." method="on_book_closed"]
[connection signal="book_pressed" from="スマートを模索する" to="." method="on_book_pressed"]
[connection signal="book_closed" from="トーチカ" to="." method="on_book_closed"]
[connection signal="book_pressed" from="トーチカ" to="." method="on_book_pressed"]
[connection signal="book_closed" from="レプリカ" to="." method="on_book_closed"]
[connection signal="book_pressed" from="レプリカ" to="." method="on_book_pressed"]
[connection signal="book_closed" from="或る街のギギ" to="." method="on_book_closed"]
[connection signal="book_pressed" from="或る街のギギ" to="." method="on_book_pressed"]
[connection signal="book_closed" from="阿呆なるものは" to="." method="on_book_closed"]
[connection signal="book_pressed" from="阿呆なるものは" to="." method="on_book_pressed"]
[connection signal="button_down" from="P1" to="." method="_on_p_1_button_down"]
[connection signal="mouse_entered" from="P1" to="." method="_on_p_1_mouse_entered"]
[connection signal="mouse_exited" from="P1" to="." method="_on_p_1_mouse_exited"]
[connection signal="gui_input" from="Ego/Ego" to="." method="_on_ego_gui_input"]

[editable path="QUI"]
[editable path="quiz"]
[editable path="S∀MPLING MΘNSTER"]
[editable path="サーカトーヴォ"]
[editable path="スマートを模索する"]
[editable path="トーチカ"]
[editable path="レプリカ"]
[editable path="或る街のギギ"]
[editable path="阿呆なるものは"]
